[tool.poetry]
name = "behave-selenium"
version = "0.1.0"
description = "Example bahave selenium tests"
authors = ["James Simpson <james.simpson@securetrading.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pyotp = "^2.3"

[tool.poetry.dev-dependencies]
behave = "^1.2"
selenium = "^3.141"
xvfbwrapper = "^0.2.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
