[tool.poetry]
name = "behave-selenium"
version = "0.1.0"
description = "Example bahave selenium tests"
authors = ["James Simpson <james.simpson@securetrading.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pyotp = "^2.4"
behave = "^1.2"
selenium = "^3.141"
pyioc = "^0.3.0"
attrdict = "^2.0.1"
wiremock = "^2.0"
assertpy = "^1.1"
PyJWT = "^1.7.1"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
